fix: correct two test failures
- AnnotatedToolScannerTest: ToolSchema.empty() includes type+properties,
  assert on empty properties map instead of empty schema map
- DirectiveDescriptorTest: List.of() rejects null elements, use
  Arrays.asList() for null-containing test data

https://claude.ai/code/session_01WCqQdjV923P4kDX9aP3Pi8